<resources>
    <string name="app_name">SegundoParcial</string>
    <string name="op">OPERACIONES</string>
    <string name="valor1">Ingresa Valor 1</string>
    <string name="valor2">Ingresa Valor 2</string>
    <string name="suma">SUMA</string>
    <string name="resta">RESTA</string>
    <string name="multi">MULTIPLICACION</string>
    <string name="divicion">DIVICION</string>
    <string name="res">EL RESULTADO ES : </string>
</resources>
