<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/valor1"
        android:inputType="number"
        android:maxLength="@integer/maxDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="number"
        android:maxLength="@integer/maxDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="64dp"
        android:text="@string/res"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="247dp"
        android:layout_height="199dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v2">

        <RadioButton
            android:id="@+id/su"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="operacionSuma"
            android:text="@string/suma" />

        <RadioButton
            android:id="@+id/res"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:onClick="operacionResta"
            android:text="@string/resta" />

        <RadioButton
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:onClick="operacionMultiplicacion"
            android:text="@string/multi" />

        <RadioButton
            android:id="@+id/div"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:onClick="operacionDivision"
            android:text="@string/divicion" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>